Fix some lines with possible nulls, and unnecessary boxing